# snekrpc

./: .gitignore  .pdm-python  CHANGELOG.md  CNAME  LICENSE.txt  README.md  client.py  funcsigs.py  justfile  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: binaries.yml  python-package.yml  tests.yml
0.8.0/: 404.html  index.html  objects.inv
0.8.0/api/: index.html
0.8.0/client/: index.html
0.8.0/protocol/: index.html
0.8.0/search/: search_index.json
0.8.0/server/: index.html
0.8.0/services/: index.html
0.8.0/stylesheets/: extra.css
docs/: api.md  client.md  server.md  services.md
docs/stylesheets/: extra.css
examples/: cache_service.py  client.py  client_test.py  echo_server.py  generate_client.py  server.py
snekrpc/: __init__.py  __main__.py  cli.py  errors.py  generate.py  glob.py  interface.py  logs.py  op.py  pack.py  protocol.py  registry.py  term.py
snekrpc/codec/: __init__.py  json.py  msgpack.py
snekrpc/formatter/: __init__.py  pretty.py  standard.py
snekrpc/service/: __init__.py  file.py  health.py  metadata.py  remote.py
snekrpc/templates/: client.py.j2
snekrpc/transport/: __init__.py  http.py  http2.py  tcp.py  unix.py
snekrpc/utils/: __init__.py  __init__.pyi  encoding.py  format.py  function.py  path.py  retry.py  url.py
tests/: conftest.py  service.py  test_file_service.py  test_function.py  test_main.py  test_url.py
