[project]
name = "snekrpc"
version = "0.7.0"
dependencies = [
    "makefun>=1.16.0",
    "msgpack>=1.0.8",
    "msgspec>=0.19.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
snekrpc = "snekrpc.__main__:main"
snekrpc-pack = "snekrpc.pack:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["snekrpc"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["snekrpc"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "C4",
    "I",
    "RUF",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pyrefly]
python-version = "3.10"
project-excludes = ["tests/**"]

[dependency-groups]
dev = [
    "pyrefly>=0.41.3",
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.5",
]
