[project]
name = "snekrpc"
version = "0.7.0"
dependencies = [
    "makefun>=1.16.0",
    "msgpack>=1.0.8",
    "msgspec>=0.19.0",
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
snekrpc = "snekrpc.__main__:main"
snekrpc-pack = "snekrpc.pack:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "snekrpc"
module-root = ""

[tool.uvbox.package]
name = "snekrpc"
script = "snekrpc"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "C4",
    "I",
    "RUF",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.5",
    "uvbox>=1.0.1",
]
